# MADZINE-MetaModule-repository

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plugin-mm.json  plugin.json
src/: ADGenerator.cpp  ALEXANDERPLATZ.cpp  DECAPyramid.cpp  Drummmmmmer.cpp  EllenRipley.cpp  EnvVCA6.cpp  EuclideanRhythm.cpp  Facehugger.cpp  KEN.cpp  KIMO.cpp  Launchpad.cpp  MADDY.cpp  MADDYPlus.cpp  NIGOQ.cpp  Obserfour.cpp  Observer.cpp  Ovomorph.cpp  PPaTTTerning.cpp  Pinpple.cpp  Pyramid.cpp  QQ.cpp  Quantizer.cpp  Runner.cpp  Runshow.cpp  SHINJUKU.cpp  SongMode.cpp  SwingLFO.cpp  TWNC.cpp  TWNC2.cpp  TWNCLight.cpp  U8.cpp  UniRhythm.cpp  UniversalRhythm.cpp  WeiiiDocumenta.cpp  YAMANOTE.cpp  plugin.cpp  plugin.hpp  theKICK.cpp
src/WorldRhythm/: AmenBreakEngine.hpp  ArticulationEngine.hpp  BatucadaEngine.hpp  CallResponseEngine.hpp  ClaveEngine.hpp  CrossRhythmEngine.hpp  EuclideanGenerator.hpp  FillGenerator.hpp  HumanizeEngine.hpp  InstrumentVoiceEngine.hpp  JazzBrushEngine.hpp  KotekanEngine.hpp  LlamadaEngine.hpp  MetricModulationEngine.hpp  MinimalDrumSynth.hpp  PatternGenerator.hpp  PatternLibrary.hpp  RestEngine.hpp  RhythmEngine.hpp  TrapHiHatEngine.hpp
