cmake_minimum_required(VERSION 3.22)
include(../metamodule-plugin-sdk/plugin.cmake)

project(MADZINE 
    VERSION 2.1.8 
    DESCRIPTION "MADZINE Modules for MetaModule" 
    LANGUAGES C CXX ASM
)

add_library(MADZINE STATIC)
target_include_directories(MADZINE PRIVATE src)

target_sources(MADZINE PRIVATE
    src/plugin.cpp
    src/SwingLFO.cpp
    src/EuclideanRhythm.cpp
    src/ADGenerator.cpp
    src/Pinpple.cpp
    src/MADDY.cpp
    src/PPaTTTerning.cpp
    src/TWNC.cpp
    src/TWNCLight.cpp
    src/QQ.cpp
    src/Observer.cpp
    src/TWNC2.cpp
    src/U8.cpp
    src/YAMANOTE.cpp
    src/Obserfour.cpp
    src/KIMO.cpp
    src/Quantizer.cpp
    src/EllenRipley.cpp
    src/MADDYPlus.cpp
)

create_plugin(
    SOURCE_LIB      MADZINE
    PLUGIN_NAME     MADZINE
    PLUGIN_JSON     ${CMAKE_CURRENT_LIST_DIR}/plugin.json
    SOURCE_ASSETS   ${CMAKE_CURRENT_LIST_DIR}/assets
    DESTINATION     ${CMAKE_CURRENT_LIST_DIR}/../metamodule-plugins/
)